--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body{
-
+  font-family: halvetica;
 }
 
 .App-logo {
@@ -22,10 +22,6 @@ body{
   font-size: large;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
 
 
 
@@ -61,12 +57,14 @@ a {
 
 
 .reddit-comment{
-  border-left-color: red;
-  border-left-width :  8px;
+  border-left-color: #02183a;
+  border-left-width :  3px;
+  border-top-width : 1px;
+  border-top-color : black;
 }
 
 .reddit-comment-group{
-  margin-left :2vw;
+  margin-left :1.2vw;
 }
 
 
@@ -75,4 +73,36 @@ a {
   top :30vh;
   left : 30vw;
   z-index :  1000;
+}
+
+.main-heading img{
+  height : 10vh;
+  width : auto;
+}
+
+.main-heading{
+  display: inline-flex;
+  padding : 2vh;
+  width :  100%;
+}
+
+.items{
+  font-size : 15px;
+}
+
+.items a {
+  color: black;
+}
+
+
+.back-button-main{
+  border-style: solid; 
+  border-color : black;
+  border-width :  2px;
+  border-radius : 10px;
+}
+
+.back-button-main:hover{
+  border : blue;
+  border-width :  4px;
 }
